# first_half_model

./: .gitignore  BETFAIR_EXTRACTION_RESULTS.md  BETFAIR_INTEGRATION_SUMMARY.md  BETFAIR_ODDS_EXTRACTOR_README.md  ENHANCED_LIVE_BETTING_SYSTEM_PROMPT.md  FILE_ORGANIZATION_SUMMARY.md  Makefile  Procfile  batch_extract_odds.py  betfair_odds_extractor.py  betfair_odds_extractor_fixed.py  check_league_seasons.py  comprehensive_gb_analysis.py  comprehensive_historical_backtest.py  db_schema.sql  env.example  extract_all_gb_leagues.py  extract_j1_league_halftime_results.py  extract_league_halftime_results.py  extract_odds_for_fixtures.py  fh  league_data_info.md  multi_league_scanner.py  pyproject.toml  scale_to_all_leagues.py  universal_league_scanner.py
02_comprehensive_backtest/: corrected_comprehensive_analysis.py
03_lay_betting_analysis/: calculate_actual_odds_pnl.py  commission_corrected_calculation.py  correct_lay_betting_calculation.py  corrected_lay_calculation.py
04_odds_matching/: comprehensive_match_finder.py  examine_gb_structure.py  examine_odds_structure.py  extract_gb_matches.py  extract_gb_matches_correct.py  final_comprehensive_analysis.py  final_odds_analysis.py  fixed_odds_examination.py  match_predictions_with_gb_odds.py  simple_odds_extraction.py
05_final_results/: list_english_predictions.py
06_utility_scripts/: comprehensive_historical_backtest_full.py  demo_multi_league_scanning.py  extract_comprehensive_odds.py  fetch_all_leagues_results.py  improved_match_analysis.py  list_api_football_leagues.py  multi_year_backtest.py  (+1 more)
tests/: __init__.py
(+65 files in other folders)
