[tool.poetry]
name = "fh-over-scanner"
version = "0.1.0"
description = "Production-grade First-Half Over 0.5 value betting scanner"
authors = ["Sports Trader <trader@example.com>"]
readme = "README.md"
packages = [{include = "src/fh_over"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
typer = {extras = ["all"], version = "^0.9.0"}
pandas = "^2.1.3"
numpy = "^1.25.2"
scipy = "^1.11.4"
sqlmodel = "^0.0.14"
httpx = "^0.25.2"
tenacity = "^8.2.3"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
toml = "^0.10.2"
rich = "^13.7.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
